--- a/electron-client/package.json
+++ b/electron-client/package.json
@@ -11,7 +11,7 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\"",
     "postinstall": "install-app-deps",
-    "dist": "npm run build && build --publish onTagOrDraft"
+    "dist": "npm run make"
   },
   "keywords": [],
   "author": "luke",
