--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,47 @@
-language: node_js
-script:
-  - cd electron-client/
-  - npm install electron-forge
+sudo: required
+dist: trusty
+
+language: c
+
+matrix:
+  include:
+    - os: osx
+    - os: linux
+      env: CC=clang CXX=clang++ npm_config_clang=1
+      compiler: clang
+
+node_js:
+  - 6
+
+cache:
+  directories:
+    - node_modules
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+      - icnsutils
+      - graphicsmagick
+      - libgnome-keyring-dev
+      - xz-utils
+      - xorriso
+      - xvfb
+
+install:
+  - nvm install 6
+  - npm install electron-builder@next
   - npm install
-  - npm make
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start &
+  - sleep 3
+
+script:
+- cd electron-client
+- npm run dist
